2011-04-13  Sam Weinig  <sam@webkit.org>

        Reviewed by Gavin Barraclough.

        WebKit2 doesn't keep overlay scrollers shown while scroll gesture held
        <rdar://problem/9260518>

        Notify the scrollbar painter controller when gesture scrolls begin and end.

        * WebCore.exp.in:
        * platform/mac/ScrollAnimatorMac.h:
        * platform/mac/ScrollAnimatorMac.mm:
        (WebCore::ScrollAnimatorMac::didBeginScrollGesture):
        (WebCore::ScrollAnimatorMac::didEndScrollGesture):
        (WebCore::ScrollAnimatorMac::beginScrollGesture):
        (WebCore::ScrollAnimatorMac::endScrollGesture):
        * platform/mac/WebCoreSystemInterface.h:
        * platform/mac/WebCoreSystemInterface.mm:

2011-04-13  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Maciej Stachowiak.

        MediaPlayerPrivateAVFoundationObjC should adopt [AVURLAsset isPlayableExtendedMIMEType:]
        https://bugs.webkit.org/show_bug.cgi?id=58451
        <rdar://problem/9278468>

        No new tests, supported MIME types haven't changed.

        * platform/graphics/avfoundation/MediaPlayerPrivateAVFoundationObjC.mm:
        (WebCore::MediaPlayerPrivateAVFoundationObjC::supportsType): Use 
        [AVURLAsset isPlayableExtendedMIMEType] instead of just the list of types.

2011-04-13  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Alexey Proskuryakov.

        Media engine fallback doesn't always work
        https://bugs.webkit.org/show_bug.cgi?id=58462

        No new tests, this was verified manually with the url noted in the bug.

        * platform/graphics/MediaPlayer.cpp:
        (WebCore::MediaPlayer::networkStateChanged):

2011-04-13  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        Extension3D needs to provide a way to check if an extension is enabled
        https://bugs.webkit.org/show_bug.cgi?id=58410

        * html/canvas/WebGLRenderingContext.cpp: