@@ -1382,8 +1382,6 @@ _wkSignalCFReadStreamEnd
 _wkSignalCFReadStreamError
 _wkSignalCFReadStreamHasBytes
 _wkSignedPublicKeyAndChallengeString
-_wkDidEndScrollGesture
-_wkDidBeginScrollGesture
 
 #if ENABLE(DOM_STORAGE)
 __ZN7WebCore14StorageTracker17initializeTrackerERKN3WTF6StringE
@@ -1407,6 +1405,8 @@ _wkContentAreaResized
 _wkContentAreaScrolled
 _wkContentAreaWillPaint
 _wkCreateCTTypesetterWithUniCharProviderAndOptions
+_wkDidBeginScrollGesture
+_wkDidEndScrollGesture
 _wkHorizontalScrollbarPainterForController
 _wkIOSurfaceContextCreate
 _wkIOSurfaceContextCreateImage
@@ -1418,10 +1418,10 @@ _wkMouseExitedContentArea
 _wkMouseMovedInContentArea
 _wkScrollbarMinimumThumbLength
 _wkScrollbarMinimumTotalLengthNeededForThumb
+_wkScrollbarPainterForceFlashScrollers
 _wkScrollbarPainterIsHorizontal
 _wkScrollbarPainterKnobAlpha
 _wkScrollbarPainterPaint
-_wkScrollbarPainterForceFlashScrollers
 _wkScrollbarPainterSetDelegate
 _wkScrollbarPainterSetOverlayState
 _wkScrollbarPainterTrackAlpha
