@@ -1,5 +1,11 @@
 2011-04-13  Sam Weinig  <sam@webkit.org>
 
+        Fix Mac builds.
+
+        * WebCore.exp.in:
+
+2011-04-13  Sam Weinig  <sam@webkit.org>
+
         Reviewed by Gavin Barraclough.
 
         WebKit2 doesn't keep overlay scrollers shown while scroll gesture held
